--- a/resource/css/main.css
+++ b/resource/css/main.css
@@ -12,3 +12,8 @@ body {
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
 }
+/* 
+
+#image{
+    max-width: 100%;
+} */
